@@ -16,6 +16,8 @@ Version 1.7.6
 - BUG: Issue #223: overlays not shown if wc
        contains unversioned folders. (Stefan)
 - CHG: Issue #224: use crashrpt. (Stefan)
+- BUG: Issue #225: Error when creating a
+       branch/tag from log dialog. (Stefan)
 
 Version 1.7.5
 - BUG: Issue #184: Refresh in log dialog only refreshes
